# Stock_Blog_kohta_2025

./: .gitignore  .graphqlconfig.yml  README.md  package.json
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js  react-icons.js
.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
.next/static/webpack/: 5c130e0d5f5752c0.webpack.hot-update.json  c19fcc9a53e267c1.webpack.hot-update.json  c44fb5ac4ab4884d.webpack.hot-update.json  e54a16e1fb3a1f51.webpack.hot-update.json  ec69f0b4d48c7d6c.webpack.hot-update.json  f3e1b1f85c1e927c.webpack.hot-update.json  webpack.022c10b42462b729.hot-update.js  webpack.061897aa9339f8eb.hot-update.js  webpack.078835ce1a65ac5e.hot-update.js  webpack.09082025a48c7b2a.hot-update.js  webpack.0ad7bee3e6a1b5f3.hot-update.js  webpack.0bb2b6a46c24654c.hot-update.js  webpack.0ec2a50657a86129.hot-update.js  (+85 more)
.storybook/: preview.ts
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
backend/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
backend/src/: main.rs
backend/src/config/: app_config.rs
backend/src/models/: articles.rs
backend/src/routes/: articles.rs  mod.rs
backend/src/utils/: error.rs
frontend/: amplify.yml  jest.config.js  next.config.ts  package-lock.json  package.json
src/app/: layout.tsx  page.tsx
src/graphql/: schema.json
src/styles/: globals.scss
(+213 files in other folders)
